--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.3",
     "bcrypt": "^5.1.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
+    "next-connect": "^1.0.0",
     "npm": "^10.2.5",
     "react": "^18",
     "react-dom": "^18"
