--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@thiago.zampieri/autentique-v2-nodejs": "^1.0.14",
     "axios": "^1.6.3",
     "bcrypt": "^5.1.1",
+    "form-data": "^4.0.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "next-connect": "^1.0.0",
     "npm": "^10.2.5",
@@ -23,6 +26,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
