--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "next-connect": "^1.0.0",
+    "nextjs-cors": "^2.2.0",
     "npm": "^10.2.5",
     "react": "^18",
     "react-dom": "^18"
