--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@thiago.zampieri/autentique-v2-nodejs": "^1.0.14",
+    "ably": "^1.2.49",
     "axios": "^1.6.3",
     "bcrypt": "^5.1.1",
     "form-data": "^4.0.0",
